# usb-audio-iiitd

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/include/: blink.h  data_buffers.h  gain_table.h  i2s_functions.h  percent_table.h  tusb_config.h  uad_callbacks.h  usb_descriptors.h  utilities.h
main/src/: blink_led.c  i2s_functions.c  uad_callbacks.c  usb_descriptors.c  utilities.c
scripts/: send_n_receive.py  siggen.py
